# SPkursach4

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  calculator.cpp  calculator.h  cmake_install.cmake  compare.cpp  rules.ninja
